[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["hatch_nodejs_build"]

[tool.hatch.build.targets.sdist]
package = ["hatch_nodejs_build"]

[project]
name = "hatch-nodejs-build"
description = "Hatch build hook plugin for Node.js builds"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
  "build",
  "hatch",
  "node",
  "nodejs",
  "plugin",
  "web",
  "build",
  "app"
]
authors = [
  { name = "Robin De Schepper", email = "robin@alexandria.sc" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Hatch",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "black>=25.1.0",
  "hatchling>=1.12.2",
  "pydantic>=2.0",
  "semantic-version>=2.10.0",
  "requests>=2.30.0"
]
version = "1.1.1"

[project.urls]
Documentation = "https://github.com/Helveg/hatch-nodejs-build?tab=readme-ov-file#hatch-nodejs-build"
History = "https://github.com/helveg/hatch-nodejs-build/commits/main"
Issues = "https://github.com/helveg/hatch-nodejs-build/issues"
Source = "https://github.com/helveg/hatch-nodejs-build"

[project.entry-points.hatch]
nodejs-build = "hatch_nodejs_build.hooks"

[dependency-groups]
dev = [
  "hatch>=1.14.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "requests-mock>=1.12.1"
]

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]

[tool.ruff.lint.isort]
known-first-party = ["hatch_nodejs_build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
    "--cov=hatch_nodejs_build",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
